# wasm-pack-template

./: Cargo.toml  README.md  bootstrap.js  output.css  package-lock.json  package.json  tailwind.config.js  webpack.config.js
.github/workflows/: check.yml  deploy.yml
src/: app.rs
static/: index.html  input.css
